Add monthly averages and deployment config
- Add monthly average calculation to database
- Add /api/monthly endpoint for monthly stats
- Update frontend with monthly stats section (December)
- Add render.yaml for Render deployment

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,28 @@
       </div>
     </div>
 
+    <div class="monthly-section">
+      <h2>Promedio Mensual - <span id="month-name">Diciembre 2025</span></h2>
+      <div class="monthly-cards">
+        <div class="card monthly">
+          <div class="card-label">Promedio Cabezas/Día</div>
+          <div class="card-value" id="avg-cabezas">-</div>
+        </div>
+        <div class="card monthly">
+          <div class="card-label">Promedio INMAG</div>
+          <div class="card-value" id="avg-inmag">-</div>
+        </div>
+        <div class="card monthly">
+          <div class="card-label">Total Cabezas del Mes</div>
+          <div class="card-value" id="total-month-cabezas">-</div>
+        </div>
+        <div class="card monthly">
+          <div class="card-label">Días con Datos</div>
+          <div class="card-value" id="month-days">-</div>
+        </div>
+      </div>
+    </div>
+
     <div class="table-section">
       <div class="table-header">
         <h2>Historial de Precios</h2>
